pages/assets/css/basic.css
/* ... */
.offcanvas__header {
    position: sticky;
    display: flex;
    top: 0;
    left: 0;
    right: 0;
    padding: 0.5em 1em;
    background: white;
    z-index: 100;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}
.offcanvas__header button {
    display: flex;
}
.offcanvas__content {
    padding: 1em;
}

/* Home page styles */

.video-image-link {
    cursor: pointer;
}

.section-goal-desktop {
    display: none;
}
.section-goal-desktop .time-value {
    padding: 0 2rem;
}
.two-col-sm {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}
@media (max-width: 991px) {
    .section-goal-desktop p {
        font-size: 20px;
    }
    .section-goal-desktop h2 {
        font-size: 3rem;
    }
    .two-col-sm {
        flex-direction: row-reverse;
        justify-content: flex-start;
    }
    .two-col-sm .mx-auto {
        margin-left: 0 !important;
        margin-right: 0 !important;
    }
    .two-col-sm p {
        width: 40%;
    }
    .story4 .text-right-40 {
        padding: 0;
    }
    .story4 .desktop-story__container {
        align-items: flex-end;
    }
}

@media (min-width: 767px) {
    .section-goal-desktop {
        display: block;
    }
}
.desktop-story__container {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: center;
    font-size: 22px;
}
.text-left {
    padding-right: 40%;
}
.text-right-40 {
    padding-left: 40%;
}
.text-right-50 {
    padding-left: 50%;
}
.text-bottom {
    padding-top: 20%;
}
.text-bottom {
    padding-top: 20%;
}
.text-align-right {
    text-align: right;
}

/* Datatable styles */

.dtr-title {
    font-weight: bold;
}
.data-table .dataTables_wrapper .dataTables_filter {
    float: none;
    width: 100%;
}
.data-table .dataTables_wrapper .dataTables_filter label {
    color: #acabab;
    text-transform: uppercase;
    display: flex;
    padding: 0 1rem 2rem;
    border-bottom: 1px solid var(--pg-secondary-color);
}
input[type="date"],
input[type="time"],
input[type="number"],
input[type="text"],
#section-give #payment-form .payment-form,
.data-table .dataTables_wrapper .dataTables_filter input {
    border: 2px solid var(--pg-grey);
    border-radius: 10px;
    padding: 5px 10px;
    box-shadow: rgba(0,0,0,0.1) 0 3px 4px 1px;
    color: var(--bs-gray-600);
}
#section-give #payment-form .payment-form,
.data-table .dataTables_wrapper .dataTables_filter input {
    width: 50%;
}
@media (max-width: 768px) {
    .data-table .dataTables_wrapper .dataTables_filter input {
        width: 100%;
    }
}
.data-table .dataTables_wrapper .dataTables_filter input {
    margin-left: 10px;
}
.data-table .sorting {
    border: none;
}
.data-table .dataTable {
    border-spacing: 2px;
    border-bottom: none !important;
}
.data-table table.dataTable.dtr-inline.collapsed>tbody>tr>th.dtr-control{
    border-radius: 6px;
    padding: 10px 39px 10px 10px;
}
.data-table table.dataTable.dtr-inline.collapsed>tbody>tr>th.dtr-control:before {
    content: "\e91b";
    font-family: PrayerGlobal;
    background-color: transparent;
    border: none;
    font-size: 1.6rem;
    left: unset;
    right: 10px;
}
.data-table table.dataTable.dtr-inline.collapsed>tbody>tr.parent>th.dtr-control:before{
    content: "\e91e";
    font-family: PrayerGlobal;
    background-color: transparent;
}
#content .dtr-control,
#active_content .dtr-control {
    background: var(--pg-brand-color-light);
    text-align: center;
}
#complete_content .dtr-control {
    background: var(--pg-brand-color-lighter);
}
.data-table .dataTable .dtr-control a {
    color: white;
    text-decoration: none;
}
.data-table .dataTables_wrapper .dataTables_info {
    float: left;
    font-size: 12px;
    text-transform: none;
    padding-left: 10px;
}
.data-table .dataTables_wrapper .dataTables_paginate {
    margin-top: 0;
}
.data-table .dataTables_wrapper .dataTables_paginate .paginate_button {
    font-size: 1rem;
    padding: 0 0.5rem;
}

/* Go stripe form */

#section-give #payment-form {
    box-shadow: none;
    text-transform: uppercase;
    margin-top: 0;
    padding-top: 0;
    font-weight: 700;
}
#section-give #payment-form .payment-form {
    margin: 1rem 0;
}
#section-give #payment-form .payment-checkbox {
    padding: 0;
    margin: 0.5rem auto;
    width: 250px;
    text-align: left;
}
#section-give #payment-form .payment-checkbox input {
    margin-right: 1rem;
}
#payment-form #next {
    border-radius: 6px;
    background-color: var(--pg-secondary-color) !important;
    text-transform: uppercase;
    font-size: 1.5rem;
    line-height: 1;
    margin-top: 1rem;
}
#payment-form #recurring-checkboxes {
    background-color: var(--pg-brand-color-lightest);
    color: white;
    padding: 0.5rem;
    margin-bottom: 1rem;
    border-radius: 1rem;
}

/* Remove striping when table is running responsively */
@media ( max-width: 1024px ) {
    table.dataTable.stripe>tbody>tr.even>*,
    table.dataTable.display>tbody>tr.even>* {
        box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0.023);
    }
}

/* User Profile styles */

#user-profile-details {
    width: min( 600px, 100% );
}

#mapbox-autocomplete-list div[data-value="address"] {
    display: none;
}

#mapbox-autocomplete .mapbox-autocomplete-items div:hover {
    background-color: var(--pg-brand-color-lightest);
    color: white;
}

#createChallengeLabel[data-visibility="private"]:before {
    content: '\f200';
    font-family: 'Ionicons';
    padding-right: 16px;
}
#createChallengeLabel[data-visibility="public"]:before {
    content: '\f4c9';
    font-family: 'Ionicons';
    padding-right: 16px;
}

.user__avatar {
    position: relative;
}
/* ... */

